# project_ELT

./: .dockerignore  .env.example  .gitignore  Arquitectura_StateManager.drawio  Dockerfile  README.md  docker-compose.yml  gui.py  index.html  install.bat  install.sh  logs_20260227_135206.json  main.py  pyproject.toml  utilities.py
config/: pipeline.yaml  settings.example.yaml  settings.yaml
data/input/: oficinas.html
docs/: docker.md  git.md  guion_flowelt.md
init/mysql/: init.sql
init/sqlserver/: init.sh
logs/: log_20260227_231555.html  log_20260302_174109.html
logs/examples/: log_example.html  log_example.json
src/: bulk_loader.py  csv analysis.py  csv_analisys.py  csv_utils.py  df_utils.py  esquema de tabla.py  log_20260206_171244.json  log_20260206_193413.json  log_20260206_194211.html  log_20260206_194211.json  log_20260210_173119.html  log_csv.py  polar_read_csv.py  table_creator.py
src/state_manager/: __init__.py
src/state_manager/core/: __init__.py  database.py  db_config_loader.py  manager.py  query_loader.py
src/state_manager/core/adapter_db/: __init__.py  database_adapter.py  db2_adapter.py  factory_db.py  mysql_adapter.py  oracle_adapter.py  postgres_adapter.py  sqlserver_adapter.py
src/state_manager/core/sql/: file_history.sql  process_history.sql  utils.sql
src/validators/: __init__.py  db_validador.py  db_validator.py  global_database.py  io_validador.py  io_validator.py
src/visualization/: log_dashboard.py  log_viewer.css  log_viewer.html  view_log.py
